# task_manager

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  package-lock.json  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: tasks.py
backend/app/auth/: auth.py
backend/app/core/: config.py
backend/app/db/: crud.py  database.py  models.py  schemas.py
frontend/: Dockerfile  package.json
frontend/src/: api.js
frontend/src/components/: TaskForm.js  TaskList.js
frontend/src/pages/: Home.js
