[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Task Management API using FastAPI"
authors = ["Christos  Efthymiou"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = "^1.10.5"
sqlalchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
passlib = "1.7.4"
jwt = "^1.3.1"
jose = "^1.0.0"
python-jose = "^3.3.0"
pytest = "^7.2.0"
httpx = "^0.23.3"
python-multipart = "^0.0.6"
